--- a/.gitignore
+++ b/.gitignore
@@ -116,5 +116,4 @@ run/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
-/docs/Template/
-/docs/DocumentationTemplater.exe
+/docs/Templater/
